v0.4.3: bugfix release. (1) Prompt: added "No unsolicited deliverables" principle — every artefact must trace to spec, template, prompt, or hints authorisation; .gitignore, CHANGELOG, IDE configs, and other conventional-but-unspecified files are forbidden unless named in DELIVERABLES. (2) cli-tool template: LANGUAGE enumeration expanded to Go, Rust, C, C++, C#, Java, Lean4. Per-language tables added for source layout, build invocation, Containerfile builder image, dependency resolution, compilation, test runs, and syntax checks. Replaces previous Go-hardcoded deliverables. Driving observation: 2026-05-19 Leanstral run against a Lean 4 cli-tool spec produced a Go module manifest, fabricated build logic, and an invented .gitignore — surface-plausible artefacts unauthorised by the template, exposing every Go-shaped assumption in the prior cli-tool template. The framework's claim of language-neutrality is now structurally honoured rather than performatively asserted.